Fixed overflow issue for mobile, added further in-code documentation

--- a/src/css/HtmlStyle.css
+++ b/src/css/HtmlStyle.css
@@ -67,7 +67,9 @@ body {
   background-image: url("../images/triangulated-image.jpg");
   background-size: 100% 100%;
   background-attachment: fixed;
-  overflow: hidden;
+  /*overflow: hidden;*/
+  overflow-y: scroll;
+
 
 }
 
