--- a/src/css/mobileStyle.css
+++ b/src/css/mobileStyle.css
@@ -131,3 +131,7 @@
   background-size: cover;
 
 }
+#mobDesc {
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+}
